--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,75 @@
-.App {
-  text-align: center;
+#root {
+  height: 100vh;
 }
+
+.App {
+  height: 100%;
+  border: 3px solid red;
+  
+}
+
+.holder {
+  display: grid;
+  height: 100%;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+  "a b"
+  "c d";
+}
+
+.square{ 
+  height: 100%;
+  border: 1px solid black;
+}
+
+#a {
+  background: linear-gradient(blue, pink);
+  grid-area: a;
+}
+
+#b {
+  background: linear-gradient(blue, pink);
+  grid-area: b;
+}
+
+#c {
+  background: linear-gradient(blue, pink);
+  grid-area: c;
+}
+
+#d {
+  background: linear-gradient(blue, pink);
+  grid-area: d;
+}
+
+.rotate-down {
+  animation: rotate-keyframes 1s forwards;
+ }
+ 
+ @keyframes rotate-keyframes {
+  from {
+   transform: rotate(0deg);
+  }
+ 
+  to {
+   transform: rotate(180deg);
+  }
+ }
+
+ .rotate-up {
+  animation: rotate-keyframes2 1s forwards;
+ }
+ 
+ @keyframes rotate-keyframes2 {
+  from {
+   transform: rotate(180deg);
+  }
+ 
+  to {
+   transform: rotate(0deg);
+  }
+ }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
